# secda_tools

./: .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  def.bzl  secda_tools.code-workspace  secda_toolsv2.h  secda_toolsv3.h  secda_toolsv4.h  secda_toolsv5.h
CMakeModules/: FindSYSC.cmake
secda_tools/: BUILD  CMakeLists.txt  secda_tools.h  test.cc
secda_tools/ap_sysc/: BUILD  CMakeLists.txt
secda_tools/axi_support/: BUILD  BUILD.old  CMakeLists.txt  axi_api_v2.h  axi_api_v3.h  libxlnk_cma.h
secda_tools/axi_support/v2/: axi_api_v2.cc  axi_api_v2.h
secda_tools/axi_support/v3/: axi_api_v3.h
secda_tools/axi_support/v4/: axi_api_sysc_v4.tpp  axi_api_v4.h  axi_api_v4.tpp
secda_tools/axi_support/v5/: axi_api_sysc_v5.tpp  axi_api_v5.h  axi_api_v5.tpp
secda_tools/axi_support/v5_old/: axi_api_sysc_v5.tpp  axi_api_v5.h  axi_api_v5.tpp
secda_tools/axi_support/v6/: README.md  axi_api.h  axi_api.tpp  axi_api_sysc.tpp  control_modules.h  control_modules.tpp  control_modules_sysc.tpp  mm_buffer.h  mm_buffer.tpp  mm_buffer_sysc.tpp  stream_dma.h  stream_dma.tpp  stream_dma_sysc.tpp
secda_tools/axi_support/v7/: README.md  axi_api.h  axi_api.tpp  axi_api_sysc.tpp  control_modules.h  mm_buffer.h  stream_dma.h
secda_tools/secda_integrator/: BUILD  CMakeLists.txt  axi4lite_control.sc.h  axi4s_engine.sc.h  axi4s_engine_generic.sc.h  hwc.sc.h  secda_hw_utils.sc.h  sysc_types.h  systemc_integrate.h
secda_tools/secda_profiler/: BUILD  CMakeLists.txt  profiler.cc  profiler.h
secda_tools/secda_utils/: BUILD  CMakeLists.txt  acc_helpers.h  multi_threading.h  utils.h
secda_tools/threading_utils/: BUILD
src/: CMakeLists.txt  exp.cc
tests/: BUILD  CMakeLists.txt  exp.cc
