load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

package(default_visibility = ["//visibility:public"])

string_flag(
    name = "config",
    build_setting_default = "off",
)

config_setting(
    name = "sysc",
    flag_values = {":config": "sysc"},
    visibility = ["//visibility:public"],
)

config_setting(
    name = "fpga",
    flag_values = {":config": "fpga"},
    visibility = ["//visibility:public"],
)


config_setting(
    name = "fpga_arm64",
    flag_values = {":config": "fpga_arm64"},
    visibility = ["//visibility:public"],
)
