include_directories(${secda_tools_SOURCE_DIR}/secda_tools/)

if(BUILD_ARM)
    use_cross_compiler()
    add_library(profiler STATIC profiler.cc)
    target_compile_options(profiler PUBLIC -fPIC)
else()
    # use_host_compiler()
    add_library(profiler OBJECT profiler.cc)
    set_target_properties(profiler PROPERTIES LINKER_LANGUAGE CXX)
    target_compile_options(profiler PUBLIC -fPIC)
endif()
